--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.3.4
   cloud_firestore: ^5.4.4
+  intl: ^0.19.0
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
