--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   cloud_firestore: ^5.4.4
   intl: ^0.19.0
   table_calendar: ^3.1.2
+  percent_indicator: ^4.2.3
+  url_launcher: ^6.3.1
+  android_intent_plus: ^5.2.0
 
 dev_dependencies:
   flutter_test:
