--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   percent_indicator: ^4.2.3
   url_launcher: ^6.3.1
   android_intent_plus: ^5.2.0
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
