--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   url_launcher: ^6.3.1
   android_intent_plus: ^5.2.0
   encrypt: ^5.0.3
+  fl_chart: ^0.69.2
 
 dev_dependencies:
   flutter_test:
