--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   android_intent_plus: ^5.2.0
   encrypt: ^5.0.3
   fl_chart: ^0.69.2
+  icons_plus: ^5.0.0
 
 dev_dependencies:
   flutter_test:
