--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,9 +53,18 @@ dependencies:
   fl_chart: ^0.69.2
   icons_plus: ^5.0.0
 
+
+
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"  # Path ke ikon Anda
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
